[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video2blog"
version = "1.0.0"
description = "Convert YouTube videos into structured blog posts using Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["youtube", "video", "blog", "gemini", "ai", "content-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-generativeai>=0.3.0",
    "yt-dlp>=2023.1.6",
    "opencv-python>=4.8.0",
    "markdown>=3.4.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.0",
]

[project.scripts]
video2blog = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Homepage = "https://github.com/ssun3/video2blog"
Repository = "https://github.com/ssun3/video2blog"
Issues = "https://github.com/ssun3/video2blog/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]